tests/neg/inline-trait-clash-val-param-method-2.scala
//> using options -language:experimental.inlineTraits
inline trait A(val x: Int)

class C extends A(10):
  def x = 1000 // error: Needs override marker
